94% method coverage missing ones are just returning another method which kills the point of testing