@@ -6,7 +6,6 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.math.BigDecimal;
-import java.util.ArrayList;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -22,49 +21,60 @@ public class EmployeeManagerTest {
 
     @Test
     void addCashier() {
+        //Arrange
         Cashier cashier = employeeManager.addCashier("Viktor", new BigDecimal("1200"));
         List<Cashier> cashiers = employeeManager.getAllCashiers();
 
+        //Assert
         assertEquals(1, cashiers.size());
-        assertEquals("Viktor", cashiers.get(0).getName());
-        assertEquals(new BigDecimal("1200"), cashiers.get(0).getSalary());
-        assertSame(cashier, cashiers.get(0));
+        assertEquals("Viktor", cashiers.getFirst().getName());
+        assertEquals(new BigDecimal("1200"), cashiers.getFirst().getSalary());
+        assertSame(cashier, cashiers.getFirst());
     }
 
     @Test
     void addCashRegister() {
+        //Arrange
         CashRegister register = employeeManager.addCashRegistry();
 
+        //Assert
         assertNotNull(register);
         assertTrue(register.isAvailable());
     }
 
     @Test
     void assignToFirstAvailableRegister_ShouldAssignWhenAvailable() {
+        //Arrange
         Cashier cashier = employeeManager.addCashier("Viktor", new BigDecimal("1200"));
         CashRegister register = employeeManager.addCashRegistry();
 
+        //Act
         boolean result = employeeManager.assignToFirstAvailableRegister(cashier);
 
+        //Assert
         assertTrue(result);
         assertFalse(register.isAvailable());
     }
 
     @Test
     void assignToFirstAvailableRegister_ShouldFailWhenNoAvailableRegister() {
+        //Arrange
         Cashier cashier = employeeManager.addCashier("Viktor", new BigDecimal("1200"));
 
-        // No register added
+        //Act
         boolean result = employeeManager.assignToFirstAvailableRegister(cashier);
 
+        //Assert
         assertFalse(result);
     }
 
     @Test
     void unassignWorkerFromCashRegistry() {
+        //Arrange
         Cashier cashier = employeeManager.addCashier("Viktor", new BigDecimal("1200"));
         CashRegister register = employeeManager.addCashRegistry();
 
+        //Act & Assert
         employeeManager.assignToFirstAvailableRegister(cashier);
         assertFalse(register.isAvailable());
 
@@ -74,6 +84,7 @@ public class EmployeeManagerTest {
 
     @Test
     void unassignWorkerFromCashRegistry_ShouldThrowForInvalidIndex() {
+        //Assert
         assertThrows(IndexOutOfBoundsException.class, () -> employeeManager.unassignWorkerFromCashRegistry(0));
     }
 }
